<resources>
    <string name="app_name">Android_UI</string>
    <string name="go_ui_activity">Go to UI Activity</string>
    <string name="settings">Settings</string>
    <string name="favorites">Favorites</string>
    <string name="follow_text">Follow</string>
    <string name="user_name">Joshi Nye Tamata</string>
    <string name="user_location">Warsaw, PL</string>
    <string name="likes">LIKES</string>
    <string name="followers">FOLLOWERS</string>
    <string name="following">FOLLOWING</string>
    <string name="photos">PHOTOS</string>
    <string name="quantity_of_likes">642K</string>
    <string name="quantity_of_followers">101K</string>
    <string name="quantity_of_following">366K</string>
    <string name="text_message_button">Message</string>
    <string name="menu_image_view">Menu image view</string>
    <string name="user_status_comment">I\'m a Fashion Designer with over 10 years of professional experience.</string>



    <string name="home_bottom_navigation">Home</string>
    <string name="home_bottom_notifications">Notifications</string>
    <string name="home_bottom_search">Search</string>
    <string name="home_bottom_favorites">Favorites</string>
    <string name="home_bottom_menu">Menu</string>
</resources>
