<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_map"
        android:icon="@drawable/ic_home_24dp"
        android:title="@string/home_bottom_navigation"/>
    <item
        android:id="@+id/nav_notification"
        android:icon="@drawable/ic_notifications_24dp"
        android:title="@string/home_bottom_notifications"/>
    <item
        android:id="@+id/nav_search"
        android:icon="@drawable/ic_search_24dp"
        android:title="@string/home_bottom_search"/>
    <item
        android:id="@+id/nav_favorites"
        android:icon="@drawable/ic_favorite_24dp"
        android:title="@string/home_bottom_favorites"/>
    <item
        android:id="@+id/nav_menu"
        android:icon="@drawable/ic_menu_24dp"
        android:title="@string/home_bottom_menu"/>
</menu>